--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/missxiaolin/tiny-qd/issues"
   },
-  "homepage": "https://github.com/missxiaolin/tiny-qd#readme"
+  "homepage": "https://github.com/missxiaolin/tiny-qd#readme",
+  "devDependencies": {
+    "rollup": "^2.23.0",
+    "rollup-plugin-serve": "^1.0.3"
+  }
 }
