--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
   },
   "homepage": "https://github.com/missxiaolin/tiny-qd#readme",
   "devDependencies": {
-    "rollup": "^2.23.0",
-    "rollup-plugin-serve": "^1.0.3",
     "@babel/core": "^7.11.1",
+    "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@types/jest": "^26.0.9",
     "css.escape": "^1.5.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.23.0",
+    "rollup-plugin-serve": "^1.0.3",
+    "babel-plugin-root-import": "^6.5.0",
+    "rollup-plugin-babel": "^4.4.0"
   },
   "dependencies": {
-    
   }
 }
